Bug 5913 - IA64 linker crashes on unsupported relocations
Summary: IA64 linker crashes on unsupported relocations
Status: RESOLVED FIXED
Alias: None
Product: binutils
Classification: Unclassified
Component: ld (show other bugs)
Version: 2.19
: P2 normal
Target Milestone: ---
Assignee: unassigned
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-03-11 19:50 UTC by H.J. Lu
Modified: 2008-03-14 16:54 UTC (History)
1 user (show)

See Also:
Host:
Target: ia64-unknown-linux-gnu
Build:
Last reconfirmed:


Attachments
A testcase (1.01 KB, application/octet-stream)
2008-03-11 19:52 UTC, H.J. Lu
Details

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2008-03-11 19:50:28 UTC
A64 linker crashes on supported relocations.
Comment 1 H.J. Lu 2008-03-11 19:52:04 UTC
Created attachment 2318 [details]
A testcase

[hjl@gnu-11 776]$ ld -shared test.o
ld: BFD (Linux/GNU Binutils) 2.18.50.0.5.20080303 assertion fail
elf64-ia64.c:4205
Segmentation fault
[hjl@gnu-11 776]$
Comment 2 H.J. Lu 2008-03-14 16:54:08 UTC
Fixed by

http://sourceware.org/ml/binutils/2008-03/msg00086.html